# cmtmsg-faker

./: .travis.yml  Cargo.toml  Procfile  README.md  Rocket.toml  commit_messages.txt
.chglog/: config.yml
src/: cors.rs  main.rs  utils.rs
