[package]
name = "cmtmsg-faker"
version = "0.1.0"
authors = ["tsuyoshiwada <wadackel@gmail.com>"]

[dependencies]
rand = "0.4"
rocket = "0.3.8"
rocket_codegen = "0.3.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
